modified taught in class

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
      <head>
-         <title>MYhome page</title>
+         <title>My home page</title>
      </head>
      <body>
-     <h1>My nm is Kshitij Tiari</h1>
+     <h1>My name is Kshitij Tiwari</h1>
      <p>This is my page</p>
      </body>
      </html>
