--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
      <head>
          <title>My home page</title>
+         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+         <script src="scripts/jquery-3.2.1.min.js"></script>
+          <script src="bootstrap/js/bootstrap.js"></script>
+
      </head>
      <body>
+         <nav class="navbar navbar-default">
+             <div class="container">
+                 <div class="navbar-header">
+                     <a class="navbar-brand" href="#">BRAND</a>
+                 </div>
+                 <ul class="nav navbar-nav navbar-right">
+                     <li><a href="#">Link 1</a></li>
+                     <li><a href="#">Link 2</a></li>
+                     <li><a href="#">Link 3</a></li>
+                   </ul>  
+             </div>
+             </nav>
+             <div class="container">
      <h1>My name is Kshitij Tiwari</h1>
      <p>This is my page</p>
+     </div>
      </body>
      </html>
 
