--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                  <div class="navbar-header">
                      <a class="navbar-brand" href="#">BRAND</a>
                  </div>
-                 <ul class="nav navbar-nav navbar-right">
+                 <ul class="nav navbar-nav navbar-right"> 
                      <li><a href="#">Link 1</a></li>
                      <li><a href="#">Link 2</a></li>
                      <li><a href="#">Link 3</a></li>
@@ -20,8 +20,15 @@
              </div>
              </nav>
              <div class="container">
+                 <div class="row">
+                     <div class="col-sm-4">
+                         <img class="img-responsive" src="image?pic.jpg"/>
+                         </div>
+                         <div class="col-sm-8">
      <h1>My name is Kshitij Tiwari</h1>
      <p>This is my page</p>
+     </div>
+     </div>
      </div>
      </body>
      </html>
